cleanup of processing outputs and fix for generated metrics