@@ -420,6 +420,16 @@
 
   <build>
     <plugins>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.1.2</version> <!-- Use latest -->
+        <configuration>
+            <argLine>
+                --add-exports java.base/sun.nio.ch=ALL-UNNAMED
+            </argLine>
+        </configuration>
+    </plugin>
       <plugin>
         <groupId>com.diffplug.spotless</groupId>
         <artifactId>spotless-maven-plugin</artifactId>
